--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generator</title>
+    <title>QR Code Generator</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Generate QR Code</h2>
+        
+        <div class="form-group">
+            <label for="text">Enter Text or URL:</label><br>
+            <input type="text" id="text" required><br><br>
+            <button onclick="generateQRCode()">Generate QR Code</button>
+        </div>
+
+        <div id="qrcode"></div>
+    </div>
+
+    <script src="qrcode.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
