--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>QR Code Generator</title>
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
         <div id="qrcode"></div>
     </div>
 
-    <script src="qrcode.js"></script>
-    <script src="script.js"></script>
+    <script src="qrcodejs-master.js" defer></script> <!-- Using defer attribute -->
+    <script src="js/script.js" defer></script> <!-- Using defer attribute -->
 </body>
 </html>
