--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>QR Code Generator</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +19,6 @@
     </div>
 
     <script src="qrcodejs-master.js" defer></script> <!-- Using defer attribute -->
-    <script src="js/script.js" defer></script> <!-- Using defer attribute -->
+    <script src="script.js" defer></script> <!-- Using defer attribute -->
 </body>
 </html>
